# c-httpie

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/src/: controllers.c  controllers.h  main.c  routes.c  routes.h
demo/src/perceptron/: layer.c  layer.h  perceptron.c  perceptron.h  utils.c  utils.h
demo/www/: index.html
httpie/: CMakeLists.txt  httpie.h
httpie/src/: buf.c  buf.h  file.c  file.h  framework.c  framework.h  http.c  http.h  request.c  request.h  response.c  response.h  route.c  route.h  server.c  server.h
test/: CMakeLists.txt
test/src/: client.c  client.h  main.c  main.h
